# betterlib

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
betterlib/: __init__.py  __main__.py  config.json  config.py  logging.py  quik.py
docs/: _config.yml  config.md  contribute.md  contributing.md  index.md  ip.md  logging.md  modules.md  quik.md  threader.md
examples/config/helloworld/: config.json  helloworld.py
examples/ip/: getsysteminfo.py
examples/logging/: helloworld.py
examples/quik/: helloworld.py
examples/threader/: randomnumbers.py
scripts/: clean.sh
src/betterlib/: __init__.py  config.py  ip.py  logging.py  quik.py  threader.py
